# dot_matrix_clock

./: LICENSE.firmware  README.adoc
firmware/dmcd/: Cargo.toml
firmware/dmcd/src/: main.rs
firmware/dmclock_disp.X/: MyConfig.mc3  font.h  main.c  neopixel.s
firmware/dmclock_disp.X/mcc_generated_files/: device_config.c  device_config.h  eusart1.c  eusart1.h  interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h  pwm3.c  pwm3.h  tmr0.c  tmr0.h  tmr1.c  tmr1.h  tmr2.c  tmr2.h  tmr3.c  tmr3.h
firmware/dmclock_disp.X/nbproject/: Makefile-genesis.properties  configurations.xml  project.xml
kicad_project/dot_matrix_clock/: bom_display_unit.txt  bom_main_board.txt  bom_misc.txt  dot_matrix.lib  dot_matrix_clock-cache.lib  dot_matrix_clock.pro  dot_matrix_clock.sch  sym-lib-table
