[package]
name = "dmcd"
version = "0.1.0"
authors = ["ikubaku <hide4d51@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rppal = { version = "0.11", features = [ "hal" ] }
linux-embedded-hal = "0.3"
clokwerk = "0.3"
chrono = "0.4"
embedded-hal = "0.2"
shared-bus = { version = "0.2", features = [ "std" ] }
embedded-graphics = "0.6"
sh1106 = "0.3"
bme280 = "0.2"
embedded-ccs811 = "0.2"
